syntax = "proto3";

option java_package = "com.example";

package com.example;

message PageRequest {
  int32 page = 1;
  int32 size = 2;
  Sort sort = 3;
}

message Sort {
  repeated Order order = 1;
}

message Order {
  string property = 1;
  Direction direction = 2;
}

enum Direction {
  ASC = 0;
  DESC = 1;
}

message Page {
  int32 totalPages = 1;
  int64 totalElements = 2;
  int32 number = 3;
  int32 size = 4;
}